[tool.poetry]
name = "distributedcomputing"
version = "0.1.0"
description = ""
authors = ["Nazariy Bachynsky <nazariybp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dask = "^2025.2.0"
numpy = "^2.2.3"
vulkan = "^1.3.275.1"
pysdl2 = "^0.9.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
