[tool.poetry]
name = "distributedcomputing"
version = "0.1.0"
description = ""
authors = ["Nazariy Bachynsky <nazariybp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dask = "^2025.2.0"
numpy = "^2.2.3"
pysdl2 = "^0.9.17"
panda3d = "^1.10.15"
ursina = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
